# MazeGen

./: .gitignore  .pylintrc  pyproject.toml  requirements.txt
api/: app.py
mazegen/: maze.py
mazegen/api/: app.py
mazegen/maze/: HuntAndKill.py  maze.py  test.py
