[tool.poetry]
name = "mazegen"
version = "0.1.0"
description = ""
authors = ["Chattox <conradlineker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
gunicorn = "^20.1.0"
flask-cors = "^3.0.10"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
